| Bug #19140 | Partitions: crash if memory and index | ||
|---|---|---|---|
| Submitted: | 17 Apr 2006 16:36 | Modified: | 22 May 2006 16:24 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server: Partition | Severity: | S3 (Non-critical) |
| Version: | 5.1.10-beta-debug | OS: | Linux (SUSE 10.0 / 64-bit) |
| Assigned to: | Mikael Ronstrom | Target Version: | |
[17 Apr 2006 16:36]
Peter Gulutzan
[17 Apr 2006 16:44]
Miguel Solorzano
Thank you for the bug report.
Version: '5.1.10-beta-debug' socket: '/tmp/mysql.sock' port: 3306 Source distribution
[New Thread 1118682032 (LWP 9645)]
[Thread 1118682032 (zombie) exited]
[New Thread 1118682032 (LWP 9647)]
[Thread 1118682032 (zombie) exited]
[New Thread 1118682032 (LWP 9649)]
Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 1118682032 (LWP 9649)]
0x0840b679 in ha_partition::min_of_the_max_uint (this=0x92c56e8, operator_func={__pfn =
0x1b1, __delta = 0}) at ha_partition.cc:5206
5206 uint min_of_the_max= ((*m_file)->*operator_func)();
(gdb)
[8 May 2006 13:55]
Mikael Ronstrom
Made use of thd->lex->create_info in a function where I should have used pointer to create_info passed as parameter, made the code take a wrong turn. Easy fix. Most likely the cause also of #19300, will mark this as duplicate when this has been verified. Will have a patch pending very soon.
[20 May 2006 17:53]
Mikael Ronstrom
Patch will appear in 5.1.11
[22 May 2006 16:24]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.1.11 changelog; closed.
