BUG#19140: Create index caused crash

mysql-test/r/ndb_partition_key.result:
  New test case to ensure path in code is tested
mysql-test/r/partition.result:
  New test case for bug
mysql-test/t/ndb_partition_key.test:
  New test case to ensure path in code is tested
mysql-test/t/partition.test:
  New test case for bug
sql/sql_partition.cc:
  Use stack variable, not variable on lex object, caused havoc when doing a create index.
sql/sql_table.cc:
  Editorial changes + added a comment to a path in code I didn't remember myself what it was good for.